--- a/Demos/BinaryStar.ipynb
+++ b/Demos/BinaryStar.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -104,18 +104,12 @@
    ],
    "source": [
     "from vpython import *\n",
-    "\n",
-    "scene.caption = \"\"\"Right button drag or Ctrl-drag to rotate \"camera\" to view scene.\n",
-    "To zoom, drag with middle button or Alt/Option depressed, or use scroll wheel.\n",
-    "  On a two-button mouse, middle is left + right.\n",
-    "Touch screen: pinch/extend to zoom, swipe or two-finger rotate.\"\"\"\n",
-    "\n",
-    "scene.forward = vector(0,-.3,-1)\n",
-    "\n",
+    "scene = canvas() # This is needed in Jupyter notebook and lab to make programs easily rerunnable\n",
     "G = 6.7e-11\n",
+    "scene.forward = vec(0,-.3,-1)\n",
     "\n",
     "giant = sphere(pos=vector(-1e11,0,0), radius=2e10, color=color.red, \n",
-    "                make_trail=True, trail_type='points', interval=10, retain=40)\n",
+    "                make_trail=True, trail_type='points', interval=10, retain=20)\n",
     "giant.mass = 2e30\n",
     "giant.p = vector(0, 0, -1e4) * giant.mass\n",
     "\n",
@@ -127,7 +121,6 @@
     "dt = 1e5\n",
     "while True:\n",
     "    rate(200)\n",
-    "\n",
     "    r = dwarf.pos - giant.pos\n",
     "    F = G * giant.mass * dwarf.mass * norm(r) / mag2(r)\n",
     "    giant.p = giant.p + F*dt\n",
@@ -158,9 +151,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "VPython",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "vpython"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -176,5 +169,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
