--- a/Demos/Bounce-VPython.ipynb
+++ b/Demos/Bounce-VPython.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -35,26 +35,48 @@
    "source": [
     "from vpython import *\n",
     "scene = canvas() # This is needed in Jupyter notebook and lab to make programs easily rerunnable\n",
-    "scene.width = 600\n",
-    "scene.height = 600\n",
-    "scene.background = color.gray(0.9)\n",
-    "scene.range = 1.3\n",
-    "s = 'Pixel-level transparency using \"depth-peeling.\"\\n'\n",
-    "s += \"Note the correct transparencies of the intersecting slabs.\\n\"\n",
-    "scene.title = s\n",
-    "\n",
-    "box(pos=vec(0,0,0), opacity=1, size=vec(1,1,1), texture=textures.flower)\n",
-    "sphere(pos=vector(0,0,.9), opacity=0.3, shininess=0, radius=0.2, color=color.green)\n",
-    "s = sphere(pos=vector(0.1,0,1.2), opacity=0.2, shininess=0, radius=0.1, color=color.cyan)\n",
-    "box(pos=s.pos, size=0.06*vector(1,1,1), color=color.gray(.2))\n",
-    "box(pos=vector(0,.5,1), color=color.red,  opacity=0.2, size=vector(.05,.2,.8), axis=vector(1,0,1) )\n",
-    "box(pos=vector(0,.5,1), color=color.cyan, opacity=0.2, size=vector(.05,.2,.8), axis=vector(1,0,-1))\n",
-    "\n",
     "scene.caption = \"\"\"Right button drag or Ctrl-drag to rotate \"camera\" to view scene.\n",
     "To zoom, drag with middle button or Alt/Option depressed, or use scroll wheel.\n",
     "     On a two-button mouse, middle is left + right.\n",
-    "Touch screen: pinch/extend to zoom, swipe or two-finger rotate.\"\"\""
+    "Touch screen: pinch/extend to zoom, swipe or two-finger rotate.\"\"\"\n",
+    "\n",
+    "side = 4.0\n",
+    "thk = 0.3\n",
+    "s2 = 2*side - thk\n",
+    "s3 = 2*side + thk\n",
+    "wallR = box (pos=vector( side, 0, 0), size=vector(thk, s2, s3),  color = color.red)\n",
+    "wallL = box (pos=vector(-side, 0, 0), size=vector(thk, s2, s3),  color = color.red)\n",
+    "wallB = box (pos=vector(0, -side, 0), size=vector(s3, thk, s3),  color = color.blue)\n",
+    "wallT = box (pos=vector(0,  side, 0), size=vector(s3, thk, s3),  color = color.blue)\n",
+    "wallBK = box(pos=vector(0, 0, -side), size=vector(s2, s2, thk), color = color.gray(0.7))\n",
+    "\n",
+    "ball = sphere (color = color.green, radius = 0.4, make_trail=True, retain=100)\n",
+    "ball.mass = 1.0\n",
+    "ball.p = vector(-0.15, -0.23, +0.27)\n",
+    "side = side - thk*0.5 - ball.radius\n",
+    "\n",
+    "dt = 0.3\n",
+    "t = 0.0\n",
+    "while True:\n",
+    "    rate(200)\n",
+    "    t = t + dt\n",
+    "    ball.pos = ball.pos + (ball.p/ball.mass)*dt\n",
+    "    if not (side > ball.pos.x > -side):\n",
+    "        ball.p.x = -ball.p.x\n",
+    "    if not (side > ball.pos.y > -side):\n",
+    "        ball.p.y = -ball.p.y\n",
+    "    if not (side > ball.pos.z > -side):\n",
+    "        ball.p.z = -ball.p.z\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -69,9 +91,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "VPython",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "vpython"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
