--- a/Demos/ButtonsSlidersMenus2.ipynb
+++ b/Demos/ButtonsSlidersMenus2.ipynb
@@ -3,80 +3,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
-    {
-     "data": {
-      "application/javascript": [
-       "require.undef(\"nbextensions/vpython_libraries/glow.min\");"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "require.undef(\"nbextensions/vpython_libraries/plotly\");"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "require.undef(\"nbextensions/vpython_libraries/glowcomm\");"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "require([\"nbextensions/vpython_libraries/glow.min\"], function(){console.log(\"GLOW LOADED\");})"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "require([\"nbextensions/vpython_libraries/plotly\"], function(){console.log(\"PLOTLY LOADED\");})"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "require([\"nbextensions/vpython_libraries/glowcomm\"], function(){console.log(\"GLOWCOMM LOADED\");})"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "data": {
       "text/html": [
@@ -104,6 +34,7 @@
    ],
    "source": [
     "from vpython import *\n",
+    "scene = canvas() # This is needed in Jupyter notebook and lab to make programs easily rerunnable\n",
     "# This version uses VPython widgets: button, radio button, checkbox, slider, menu\n",
     "# See ButtonsSlidersMenus1 for a version that uses Jupyter notebook widgets: button, slider, menu\n",
     "scene.width = 350\n",
@@ -155,15 +86,12 @@
     "def setspeed(s):\n",
     "    global speed\n",
     "    speed = s.value\n",
-    "    wt.text = '{}'.format(s.value)\n",
     "    \n",
-    "sl = slider(min=20, max=500, value=250, length=280, bind=setspeed, right=15)\n",
-    "\n",
-    "wt = wtext(text=sl.value)\n",
+    "slider(min=20, max=500, value=250, length=350, bind=setspeed)\n",
     "\n",
     "scene.append_to_caption('\\n')\n",
     "\n",
-    "r1 = radio(bind=Color, checked=True, text='Cyan')\n",
+    "r1 = radio(bind=Color, checked=True, text='Cyan ')\n",
     "\n",
     "scene.append_to_caption('       ')\n",
     "\n",
@@ -190,7 +118,7 @@
     "\n",
     "scene.append_to_caption('\\n')\n",
     "\n",
-    "r2 = radio(bind=Color, text='Red')\n",
+    "r2 = radio(bind=Color, text='Red ')\n",
     "\n",
     "scene.append_to_caption('         ')\n",
     "\n",
@@ -200,13 +128,12 @@
     "    else:\n",
     "        currentobject.opacity = 1\n",
     "\n",
-    "checkbox(bind=transparency, text='Transparent')\n",
+    "trans = checkbox(bind=transparency, text='Transparent')\n",
     "\n",
     "while True:\n",
     "    rate(100)\n",
     "    if running:\n",
-    "        currentobject.rotate(angle=speed*1e-4, axis=vector(0,1,0))\n",
-    "\n"
+    "        currentobject.rotate(angle=speed*1e-4, axis=vector(0,1,0))\n"
    ]
   },
   {
@@ -236,9 +163,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
