--- a/Demos/Color-RGB-HSV2.ipynb
+++ b/Demos/Color-RGB-HSV2.ipynb
@@ -7,78 +7,6 @@
    "outputs": [
     {
      "data": {
-      "application/javascript": [
-       "require.undef(\"nbextensions/vpython_libraries/glow.min\");"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "require.undef(\"nbextensions/vpython_libraries/glowcomm\");"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "require.undef(\"nbextensions/vpython_libraries/jquery-ui.custom.min\");"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "require([\"nbextensions/vpython_libraries/glow.min\"], function(){console.log(\"GLOW LOADED\");})"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "require([\"nbextensions/vpython_libraries/glowcomm\"], function(){console.log(\"GLOWCOMM LOADED\");})"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "require([\"nbextensions/vpython_libraries/jquery-ui.custom.min\"], function(){console.log(\"JQUERY LOADED\");})"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
       "text/html": [
        "<div id=\"glowscript\" class=\"glowscript\"></div>"
       ],
@@ -104,65 +32,49 @@
    ],
    "source": [
     "from vpython import *\n",
-    "\n",
-    "# GlowScript version of Jupyter demo program Color-RGB-HSV\n",
+    "scene = canvas() # This is needed in Jupyter notebook and lab to make programs easily rerunnable\n",
+    "# This version uses VPython slider\n",
+    "# See ButtonsSlidersMenus1 for a version that uses Jupyter slider\n",
     "\n",
     "scene.userzoom = False\n",
     "scene.userspin = False\n",
-    "scene.width = 460\n",
+    "scene.width = 400\n",
     "scene.height = 200\n",
     "scene.range = 1\n",
     "scene.background = color.red\n",
     "box(pos=vector(10,0,0)) # Force creation of canvas; box is not seen because it is outside the canvas\n",
     "cancopy = 'You can Ctrl-C or Command-C copy these RGB and HSV values:\\n'\n",
     "scene.title = cancopy\n",
-    "scene.append_to_title(\"RGB = <\")\n",
-    "titlergb = wtext(pos=scene.title_anchor, text=\"1.000, 0.000, 0.000\")\n",
-    "scene.append_to_title(\">, HSV = <\")\n",
-    "titlehsv = wtext(pos=scene.title_anchor, text=\"0.000, 0.000, 0.000\")\n",
-    "scene.append_to_title(\">\")\n",
+    "scene.append_to_title(\"RGB = <1.000, 0.000, 0.000>, HSV = <0.000, 0.000, 0.000>\")\n",
     "\n",
     "C = ['Red', 'Green', 'Blue', 'Hue', 'Saturation', 'Value']\n",
     "sliders = []\n",
-    "wts = []\n",
     "\n",
     "def set_background(sl):\n",
     "    if sl.id < 3:\n",
-    "        wts[sl.id].text = '{:1.3f}'.format(sl.value)\n",
     "        rgb = vector(sliders[0].value, sliders[1].value, sliders[2].value)\n",
     "        hsv = color.rgb_to_hsv(rgb)\n",
-    "        sliders[3].value = int(1000*hsv.x)/1000 # reset HSV slider positions; display 3 figures\n",
+    "        sliders[3].value = int(1000*hsv.x)/1000# reset HSV slider positions; display 3 figures\n",
     "        sliders[4].value = int(1000*hsv.y)/1000\n",
     "        sliders[5].value = int(1000*hsv.z)/1000\n",
-    "        wts[3].text = '{:1.3f}'.format(hsv.x)\n",
-    "        wts[4].text = '{:1.3f}'.format(hsv.y)\n",
-    "        wts[5].text = '{:1.3f}'.format(hsv.z)\n",
     "    else:\n",
-    "        wts[sl.id].text = '{:1.3f}'.format(sl.value)\n",
     "        hsv = vector(sliders[3].value, sliders[4].value, sliders[5].value)\n",
     "        rgb = color.hsv_to_rgb(hsv)\n",
     "        sliders[0].value = int(1000*rgb.x)/1000 # reset RGB slider positions; display 3 figures\n",
     "        sliders[1].value = int(1000*rgb.y)/1000\n",
     "        sliders[2].value = int(1000*rgb.z)/1000\n",
-    "        wts[0].text = '{:1.3f}'.format(rgb.x)\n",
-    "        wts[1].text = '{:1.3f}'.format(rgb.y)\n",
-    "        wts[2].text = '{:1.3f}'.format(rgb.z)\n",
     "    scene.background = rgb\n",
     "    # For readability, limit precision of display of quantities to 3 figures\n",
-    "    titlergb.text = \"{:1.3f}, {:1.3f}, {:1.3f}\".format(rgb.x, rgb.y, rgb.z)\n",
-    "    titlehsv.text = \"{:1.3f}, {:1.3f}, {:1.3f}\".format(hsv.x, hsv.y, hsv.z)\n",
+    "    f = \"RGB = <{:1.3f}, {:1.3f}, {:1.3f}>, HSV = <{:1.3f}, {:1.3f}, {:1.3f}>\"\n",
+    "    scene.title = cancopy + f.format(rgb.x, rgb.y, rgb.z, hsv.x, hsv.y, hsv.z)\n",
     "\n",
     "scene.caption = '\\n'\n",
     "for i in range(6): # Create the 3 RGB and 3 HSV sliders\n",
     "    sliders.append(slider(length=300, left=10, min=0, max=1, bind=set_background, id=i))\n",
-    "    scene.append_to_caption('    '+C[i]+' ') # Display slider name\n",
-    "    wts.append(wtext(text='0.000'))\n",
-    "    scene.append_to_caption('\\n\\n')\n",
+    "    scene.append_to_caption('    '+C[i]+'\\n\\n') # Display slider name\n",
     "    if i == 2: scene.append_to_caption(\"\\n\\n\") # Separate the RGB and HSV sliders\n",
     "sliders[0].value = 1 # make the background red\n",
-    "sliders[4].value = sliders[5].value = 1\n",
-    "wts[0].text = '1.000'\n",
-    "wts[4].text = wts[5].text = '1.000'"
+    "sliders[4].value = sliders[5].value = 1\n"
    ]
   },
   {
@@ -192,9 +104,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
