--- a/Demos/Gyroscope.ipynb
+++ b/Demos/Gyroscope.ipynb
@@ -2,13 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
       "application/javascript": [
-       "require.undef(\"nbextensions/vpython_libraries/glow.min\");"
+       "require.undef(\"nbextensions/vpython_libraries/jquery-ui.custom.min\");"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "require.undef(\"nbextensions/vpython_libraries/glow.2.2.min\");"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -32,7 +46,7 @@
     {
      "data": {
       "application/javascript": [
-       "require.undef(\"nbextensions/vpython_libraries/jquery-ui.custom.min\");"
+       "require([\"nbextensions/vpython_libraries/jquery-ui.custom.min\"], function(){console.log(\"JQUERY LOADED\");})"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -44,7 +58,7 @@
     {
      "data": {
       "application/javascript": [
-       "require([\"nbextensions/vpython_libraries/glow.min\"], function(){console.log(\"GLOW LOADED\");})"
+       "require([\"nbextensions/vpython_libraries/glow.2.2.min\"], function(){console.log(\"GLOW LOADED\");})"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -57,18 +71,6 @@
      "data": {
       "application/javascript": [
        "require([\"nbextensions/vpython_libraries/glowcomm\"], function(){console.log(\"GLOWCOMM LOADED\");})"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "require([\"nbextensions/vpython_libraries/jquery-ui.custom.min\"], function(){console.log(\"JQUERY LOADED\");})"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -104,6 +106,7 @@
    ],
    "source": [
     "from vpython import *\n",
+    "scene = canvas() # This is needed in Jupyter notebook and lab to make programs easily rerunnable\n",
     "\n",
     "# Gyroscope sitting on a pedestal\n",
     "\n",
@@ -114,15 +117,8 @@
     "scene.width = 800\n",
     "scene.height = 600\n",
     "scene.range = 1.2\n",
-    "scene.title = \"A precessing, nutating gyroscope\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "scene.title = \"A precessing, nutating gyroscope\"\n",
+    "\n",
     "Lshaft = 1 # length of gyroscope shaft\n",
     "r = Lshaft/2 # distance from support to center of mass\n",
     "Rshaft = 0.03 # radius of gyroscope shaft\n",
@@ -147,7 +143,7 @@
     "gyro = compound([shaft, rotor, base, end])\n",
     "gyro_center = gyro.pos\n",
     "gyro.texture = textures.metal\n",
-    "tip = sphere(pos=shaft.axis, radius=shaft.radius/2,  make_trail=True, retain=80)\n",
+    "tip = sphere(pos=shaft.axis, radius=shaft.radius/2,  make_trail=True, retain=250)\n",
     "tip.trail_color = color.green\n",
     "tip.trail_radius = 0.15*Rshaft\n",
     "\n",
@@ -184,7 +180,7 @@
     "    tip.clear_trail()\n",
     "\n",
     "reset()\n",
-    "scene.waitfor('textures')\n",
+    "#scene.waitfor('textures') # not yet implemented\n",
     "\n",
     "dt = 0.0001\n",
     "t = 0\n",
@@ -213,18 +209,8 @@
     "    gyro.pos = 0.5*Lshaft*A\n",
     "    tip.pos = Lshaft*A\n",
     "    t = t+dt*Nsteps\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "tip.trail_color = color.yellow"
+    "    \n",
+    "\n"
    ]
   },
   {
@@ -254,9 +240,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
