--- a/Demos/MousePicking.ipynb
+++ b/Demos/MousePicking.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -104,6 +106,7 @@
    ],
    "source": [
     "from vpython import *\n",
+    "scene = canvas() # This is needed in Jupyter notebook and lab to make programs easily rerunnable\n",
     "scene.width = scene.height = 500\n",
     "scene.background = color.gray(0.8)\n",
     "scene.range = 2.2\n",
@@ -156,7 +159,7 @@
     "            lastcolor = vector(hit.color) # make a copy\n",
     "            hit.color = color.red\n",
     "\n",
-    "scene.bind(\"mousedown\", getevent)\n"
+    "scene.bind(\"mousedown\", getevent)"
    ]
   },
   {
@@ -186,9 +189,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
