--- a/Demos/Textures2.ipynb
+++ b/Demos/Textures2.ipynb
@@ -3,80 +3,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
-    {
-     "data": {
-      "application/javascript": [
-       "require.undef(\"nbextensions/vpython_libraries/glow.min\");"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "require.undef(\"nbextensions/vpython_libraries/glowcomm\");"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "require.undef(\"nbextensions/vpython_libraries/jquery-ui.custom.min\");"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "require([\"nbextensions/vpython_libraries/glow.min\"], function(){console.log(\"GLOW LOADED\");})"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "require([\"nbextensions/vpython_libraries/glowcomm\"], function(){console.log(\"GLOWCOMM LOADED\");})"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "require([\"nbextensions/vpython_libraries/jquery-ui.custom.min\"], function(){console.log(\"JQUERY LOADED\");})"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "data": {
       "text/html": [
@@ -104,6 +34,11 @@
    ],
    "source": [
     "from vpython import *\n",
+    "scene = canvas() # This is needed in Jupyter notebook and lab to make programs easily rerunnable\n",
+    "\n",
+    "# This version uses a VPython menu\n",
+    "# See Textures1 for a version that uses a Jupyter notebook menu\n",
+    "\n",
     "scene.width = 600\n",
     "scene.height = 600\n",
     "show = 'box'\n",
@@ -116,9 +51,11 @@
     "Ts = [textures.flower, textures.granite, textures.gravel, textures.metal, textures.rock, textures.rough,\n",
     "      textures.rug, textures.stones, textures.stucco, textures.wood, textures.wood_old, textures.earth]\n",
     "bumps = [ None, None, 'gravel', None, 'rock', None, None, 'stones', 'stucco', None, 'wood_old']\n",
+    "labels = []\n",
     "\n",
     "def erase():\n",
-    "    for obj in scene.objects:\n",
+    "    objects = scene.objects\n",
+    "    for obj in objects:\n",
     "        obj.visible = False\n",
     "\n",
     "def show_object(index, x, y):\n",
@@ -139,10 +76,10 @@
     "        c = pyramid(pos=vec(x-D/2,y,0), size=D*vec(1,1,1))\n",
     "    c.index = index\n",
     "    c.shininess = 0\n",
-    "    c.texture = {'file':T, 'bumpmap':B}\n",
-    "    label(pos=vec(x,y-.5,0), box=0, text='textures.'+names[index])\n",
+    "    c.texture = dict(file=T, bumpmap=B)\n",
+    "    labels.append(label(pos=vec(x,y-.5,0), box=0, text='textures.'+names[index]))\n",
     "\n",
-    "def setup():\n",
+    "def start_setup():\n",
     "    scene.range = 2.2\n",
     "    scene.fov = 0.2\n",
     "    scene.center = vec(1.5,2,0)\n",
@@ -157,14 +94,20 @@
     "            show_object(index, x, y)\n",
     "            index += 1\n",
     "        y -= 1.3\n",
+    "\n",
+    "def end_setup():\n",
     "    scene.visible = True\n",
     "\n",
-    "setup()\n",
-    "scene.visible = False\n",
+    "def setup():\n",
+    "    start_setup()\n",
+    "    end_setup()\n",
+    "\n",
+    "start_setup()\n",
     "scene.caption = \"Loading textures...\"\n",
     "scene.waitfor(\"textures\")\n",
+    "scene.caption = \"\"\n",
+    "\n",
     "scene.caption = \"Choose the type of object:  \"\n",
-    "scene.visible = True\n",
     "\n",
     "def choose(c):\n",
     "    global show\n",
@@ -173,6 +116,7 @@
     "menu(choices=['box', 'sphere', 'cylinder', 'cone', 'pyramid'], selected='box', bind=choose)\n",
     "\n",
     "scene.append_to_caption('\\n\\nClick an object to enlarge it; then click anywhere to show all objects again.')\n",
+    "end_setup()\n",
     "\n",
     "hit = None\n",
     "clicked = False\n",
@@ -222,9 +166,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "VPython",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "vpython"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -236,9 +180,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
