--- a/Demos/BillboardingText.ipynb
+++ b/Demos/BillboardingText.ipynb
@@ -106,6 +106,7 @@
    ],
    "source": [
     "from vpython import *\n",
+    "scene = canvas() # This is needed in Jupyter notebook and lab to make programs easily rerunnable\n",
     "b = box(pos=vec(-4,2,0), color=color.red)\n",
     "c1 = cylinder(pos=b.pos, radius=0.1, axis=vec(0,1.5,0), color=color.yellow)\n",
     "s = sphere(pos=vec(4,-4,0), radius=0.5, color=color.green)\n",
@@ -156,9 +157,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 2
 }
