--- a/Demos/BoxLightTest.ipynb
+++ b/Demos/BoxLightTest.ipynb
@@ -11,7 +11,7 @@
     {
      "data": {
       "application/javascript": [
-       "require.undef(\"nbextensions/vpython_libraries/glow.min\");"
+       "require.undef(\"nbextensions/jquery-ui.custom.min\");"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -23,7 +23,7 @@
     {
      "data": {
       "application/javascript": [
-       "require.undef(\"nbextensions/vpython_libraries/glowcomm\");"
+       "require.undef(\"nbextensions/glow.2.1.min\");"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -35,7 +35,7 @@
     {
      "data": {
       "application/javascript": [
-       "require.undef(\"nbextensions/vpython_libraries/jquery-ui.custom.min\");"
+       "require.undef(\"nbextensions/glowcomm\");"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -47,31 +47,7 @@
     {
      "data": {
       "application/javascript": [
-       "require([\"nbextensions/vpython_libraries/glow.min\"], function(){console.log(\"GLOW LOADED\");})"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "require([\"nbextensions/vpython_libraries/glowcomm\"], function(){console.log(\"GLOWCOMM LOADED\");})"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "require([\"nbextensions/vpython_libraries/jquery-ui.custom.min\"], function(){console.log(\"JQUERY LOADED\");})"
+       "require([\"nbextensions/glowcomm\"], function(){console.log(\"glowcomm loaded\");})"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -107,6 +83,7 @@
    ],
    "source": [
     "from vpython import *\n",
+    "scene = canvas() # This is needed in Jupyter notebook and lab to make programs easily rerunnable\n",
     "\n",
     "# Mikhail Temkine, University of Toronto, April 2007\n",
     "\n",
@@ -160,9 +137,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 2
 }
