--- a/Demos/DipoleElectricField.ipynb
+++ b/Demos/DipoleElectricField.ipynb
@@ -106,6 +106,7 @@
    ],
    "source": [
     "from vpython import *\n",
+    "scene = canvas() # This is needed in Jupyter notebook and lab to make programs easily rerunnable\n",
     "\n",
     "scale = 4e-14/1e17\n",
     "ec = 1.6e-19  # electron charge\n",
@@ -196,9 +197,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 2
 }
