--- a/Demos/Gyroscope-Suspended.ipynb
+++ b/Demos/Gyroscope-Suspended.ipynb
@@ -106,6 +106,7 @@
    ],
    "source": [
     "from vpython import *\n",
+    "scene = canvas() # This is needed in Jupyter notebook and lab to make programs easily rerunnable\n",
     "\n",
     "# Written by Bruce Sherwood, licensed under Creative Commons 4.0.\n",
     "# All uses permitted, but you must not claim that you wrote it, and\n",
@@ -318,9 +319,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 2
 }
