--- a/Demos/HardSphereGas.ipynb
+++ b/Demos/HardSphereGas.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -205,11 +206,11 @@
     "for i in range(nhisto): histo.append(0.0)\n",
     "histo[barx(pavg/mass)] = Natoms\n",
     "\n",
-    "graph( width=500, height=300, xmax=3000, ymax=Natoms*deltav/1000, align='right', fast=False )\n",
-    "theory = gcurve( color=color.cyan, label='Theory')\n",
+    "graph( width=500, height=300, xmax=3000, ymax=Natoms*deltav/1000, align='right' )\n",
+    "theory = gcurve( color=color.cyan )\n",
     "dv = 10\n",
     "for v in range(0,3001+dv,dv):  # theoretical prediction\n",
-    "    theory.plot(v, (deltav/dv)*Natoms*4*pi*((mass/(2*pi*k*T))**1.5) *exp(-0.5*mass*(v**2)/(k*T))*(v**2)*dv )\n",
+    "    theory.plot( v, (deltav/dv)*Natoms*4*pi*((mass/(2*pi*k*T))**1.5) *exp(-0.5*mass*(v**2)/(k*T))*(v**2)*dv )\n",
     "\n",
     "accum = []\n",
     "for i in range(int(3000/deltav)): accum.append([deltav*(i+.5),0])\n",
@@ -218,7 +219,7 @@
     "def interchange(v1, v2):  # remove from v1 bar, add to v2 bar\n",
     "    barx1 = barx(v1)\n",
     "    barx2 = barx(v2)\n",
-    "    if barx1 == barx2 or barx1 > 3900/dv or barx2 > 3900/dv:  return \n",
+    "    if barx1 == barx2:  return \n",
     "    histo[barx1] -= 1\n",
     "    histo[barx2] += 1\n",
     "    \n",
@@ -333,9 +334,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
