--- a/Demos/Lorenz.ipynb
+++ b/Demos/Lorenz.ipynb
@@ -82,6 +82,7 @@
    ],
    "source": [
     "from vpython import *\n",
+    "scene = canvas() # This is needed in Jupyter notebook and lab to make programs easily rerunnable\n",
     "from numpy import arange, clip\n",
     "\n",
     "# David Scherer\n",
@@ -147,9 +148,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 2
 }
