--- a/Demos/RotatingBoxes.ipynb
+++ b/Demos/RotatingBoxes.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -104,12 +106,12 @@
    ],
    "source": [
     "from vpython import *\n",
+    "scene = canvas() # This is needed in Jupyter notebook and lab to make programs easily rerunnable\n",
     "from time import clock\n",
     "\n",
     "N = 10\n",
     "\n",
     "scene.title = \"{} by {} by {} = {} rotating boxes\".format(N,N,N,N**3)\n",
-    "scene.append_to_title(\"\\nGPU performance: <scan id='fps'/>\")\n",
     "\n",
     "boxes = []\n",
     "\n",
@@ -180,9 +182,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
