--- a/Demos/RotatingCurve.ipynb
+++ b/Demos/RotatingCurve.ipynb
@@ -9,6 +9,7 @@
    "outputs": [],
    "source": [
     "from vpython import *\n",
+    "scene = canvas() # This is needed in Jupyter notebook and lab to make programs easily rerunnable\n",
     "from random import random\n",
     "scene.width = scene.height = 600\n",
     "scene.background = color.white\n",
@@ -64,7 +65,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
