--- a/Demos/RotatingPoints.ipynb
+++ b/Demos/RotatingPoints.ipynb
@@ -104,6 +104,7 @@
    ],
    "source": [
     "from vpython import *\n",
+    "scene = canvas() # This is needed in Jupyter notebook and lab to make programs easily rerunnable\n",
     "scene.width = scene.height = 600\n",
     "scene.background = color.white\n",
     "scene.range = 1.3\n",
