--- a/Demos/Rug.ipynb
+++ b/Demos/Rug.ipynb
@@ -106,6 +106,7 @@
    ],
    "source": [
     "from vpython import *\n",
+    "scene = canvas() # This is needed in Jupyter notebook and lab to make programs easily rerunnable\n",
     "\n",
     "scene.width = scene.height = 600\n",
     "scene.range = 0.6\n",
@@ -149,7 +150,7 @@
     "    for x in range(w): # from 0 to w, not including w\n",
     "        quad(v0=verts[y][x], v1=verts[y][x+1], v2=verts[y+1][x+1], v3=verts[y+1][x], texture=textures.rug)\n",
     "\n",
-    "scene.waitfor('textures') # wait until the rug texture has been loaded\n",
+    "#scene.waitfor('textures') # wait until the rug texture has been loaded\n",
     "\n",
     "Lpulse = 0.4 # length of half sine wave\n",
     "dy_pulse = Lpulse/50\n",
@@ -173,7 +174,8 @@
     "y = -0.5-Lpulse-dy_pulse # bottom of pulse (starts below rug)\n",
     "while True:\n",
     "    rate(50)\n",
-    "    if not run: continue\n",
+    "    while not run:\n",
+    "        scene.waitfor('redraw')\n",
     "    y += dy_pulse\n",
     "    if y+Lpulse <= -0.5:\n",
     "        continue\n",
@@ -217,6 +219,15 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -235,9 +246,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 2
 }
