--- a/Demos/Textures1.ipynb
+++ b/Demos/Textures1.ipynb
@@ -107,6 +107,7 @@
    "source": [
     "import ipywidgets as wd\n",
     "from vpython import *\n",
+    "scene = canvas() # This is needed in Jupyter notebook and lab to make programs easily rerunnable\n",
     "\n",
     "# This version uses a Jupyter notebook menu\n",
     "# See Textures2 for a version that uses a VPython menu\n",
@@ -257,9 +258,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 2
 }
