Fix link to bounce jupyter demo

--- a/index.ipynb
+++ b/index.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "[Binary star](Demos/BinaryStar.ipynb): two stars orbit each other\n",
     "\n",
-    "[Bounce](Demos/Bounce.ipynb): a ball bounces in a 3D box\n",
+    "[Bounce](Demos/Bounce-VPython.ipynb): a ball bounces in a 3D box\n",
     "\n",
     "[Local moving lights](Demos/BoxLightTest.ipynb): local lights moving around the scene\n",
     "\n",
